--- a/static/styles.css
+++ b/static/styles.css
@@ -1,12 +1,14 @@
-body, html {
+body {
     font-family: 'Roboto', sans-serif;
     width: 100%;
     height: 100%;
     margin: 0;
+    background-color: bisque;
 }
 
 header {
-    padding: 20px;
+    padding: 5px 30px;
+
     width: 100%;
-    
+    background-color: white;
 }
