--- a/templates/base.html
+++ b/templates/base.html
@@ -9,13 +9,17 @@
 </head>
 
 <header>
-    <h3>Place Holder Title</h3>
+    <h3>Cookies By The Month</h3>
 </header>
 
 <body>
+
     {% block content %}
     {% endblock %}
 
+    <div class="background-decorator">
+        <img src="/static/images/cookie.png" />
+    </div>
 </body>
 
 </html>
