--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>{{email}} {{message}}</h1>
+<section>
+    <div class="signup-success">
+        <p>{{email}} {{message}}</p>
+    </div>
+</section>
 
 {% endblock content %}
