--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,10 @@
     {% block content %}
     {% endblock %}
 
-    <div class="background-decorator">
+    <div class="bgblob blob-small"></div>
+    <div class="bgblob blob-small2"></div>
+
+    <div class="background-image">
         <img src="/static/images/cookie.png" />
     </div>
 </body>
