added about us page

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,12 @@
 </head>
 
 <header>
-    <h3>Doughversity</h3>
+    <a href="/" class="title">
+        <h3>Doughversity</h3>
+    </a>
+    <a href="/about" class="title">
+        <h3>About Us</h3>
+    </a>
 </header>
 
 <body>
