--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <section>
-    <div class="signup-success">
+    <div class="content-background">
         <p>{{email}} {{message}}</p>
     </div>
 </section>
