--- a/static/styles.css
+++ b/static/styles.css
@@ -8,10 +8,19 @@ body {
 }
 
 header {
-    padding: 5px 30px;
+    padding: 5px 0px;
     width: 100%;
     background-color: white;
     box-shadow: 5px 5px 10px #555555;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.title {
+    margin: 0px 30px;
+    color: rgb(24, 22, 22);
+    text-decoration: none;
 }
 
 #email-signup-box {
@@ -61,12 +70,13 @@ section {
     margin-top: 2%;
 }
 
-.signup-success {
+.content-background {
     background-color: white;
     text-align: center;
     padding: 10px 20px;
     border-radius: 10px;
     font-size: 20px;
+    max-width: 60%;
 }
 
 .bgblob {
