--- a/templates/about.html
+++ b/templates/about.html
@@ -4,8 +4,9 @@
     <div class="content-background">
         <h3>About Us</h3>
         <p>Our service is designed to help bakers sell their cookies and connect users with cookies from locally owned
-            bakeries from around the country. Our web service will initially provide monthly subscription boxes
-            containing unique, bakery made cookies from up to a dozen different bakeries.</p>
+            bakeries around the country. <br><br>Our web service will initially provide monthly subscription boxes
+            containing unique, bakery made cookies from up to a dozen different bakeries, and expand to offer
+            an online storefront where small bakers can sell their goods online to a wide audience free of charge.</p>
     </div>
 </section>
 {% endblock content %}
